@@ -1,7 +1,7 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         sendpage
-version:      1
+version:      1.001
 version_from: sendpage
 installdirs:  site
 requires:
